using configuration parameter

--- a/src/Akka.Persistence.EventStore/reference.conf
+++ b/src/Akka.Persistence.EventStore/reference.conf
@@ -34,13 +34,13 @@
             # dispatcher used to drive journal actor
             plugin-dispatcher = "akka.actor.default-dispatcher"
         
-            #how many events to pull at a time while reading
+            # how many snapshots to pull at a time
             read-batch-size = 500
             
-            #which adapter to use
+            # which adapter to use
             adapter = "default"
             
-            # prefix used to create stream name along side with PersistanceId for snapshot
+            # prefix used to create stream name along side with PersistenceId for snapshot
             prefix = "snapshot@"
 	    }
 	}
