adding standard persistence queries support
persistenceIds

AllPersistenceIds

fixing default adapter

=> dotNetStandard1.6

=> dotNetStandard1.6

EventsByPersistanceId and CurrentEventsByPersistanceId

EventsByTag query

EventsByTag query

refactoring

refactoring

refactoring

--- a/src/Akka.Persistence.EventStore.Tests/Akka.Persistence.EventStore.Tests.csproj
+++ b/src/Akka.Persistence.EventStore.Tests/Akka.Persistence.EventStore.Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.console" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
 
@@ -21,12 +22,18 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Akka.Persistence.EventStore\Akka.Persistence.EventStore.csproj" />
+    <ProjectReference Include="..\Akka.Persistence.Query.EventStore\Akka.Persistence.Query.EventStore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Projections\taggedProjection.js" />
+    <EmbeddedResource Include="Projections\taggedProjection.js" />
   </ItemGroup>
 
 </Project>
