--- a/src/Akka.Persistence.EventStore/Akka.Persistence.EventStore.csproj
+++ b/src/Akka.Persistence.EventStore/Akka.Persistence.EventStore.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+		<TargetFrameworks>net45;netstandard1.6</TargetFrameworks>
 		<LangVersion>7.1</LangVersion>
 	</PropertyGroup>
 	<PropertyGroup>
@@ -15,6 +15,7 @@
 		<PackageProjectUrl>https://github.com/AkkaNetContrib/Akka.Persistence.EventStore</PackageProjectUrl>
 		<PackageLicenseUrl>https://github.com/AkkaNetContrib/Akka.Persistence.EventStore/blob/dev/LICENSE</PackageLicenseUrl>
 		<GenerateDocumentationFile>false</GenerateDocumentationFile>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 
@@ -22,16 +23,20 @@
 		<EmbeddedResource Include="reference.conf" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Akka.Persistence" Version="1.3.9" />
-		<PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+		<PackageReference Include="Akka.Persistence" Version="1.3.*" />
+		<PackageReference Include="Newtonsoft.Json" Version="11.0.*" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
-		<PackageReference Include="EventStore.Client" Version="4.1.1" />
+		<PackageReference Include="EventStore.Client" Version="4.0.0-4.1.*" />
 	</ItemGroup>
 
-	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-		<PackageReference Include="EventStore.ClientAPI.NetCore" Version="4.1.0.23" />
+	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
+		<PackageReference Include="EventStore.ClientAPI.NetCore" Version="4.0.0-4.1.*" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Akka.Persistence.EventStore.Common\Akka.Persistence.EventStore.Common.csproj" />
 	</ItemGroup>
 
 </Project>
