cleanup and preparing 1.3.0 version

--- a/src/Akka.Persistence.EventStore.Query/reference.conf
+++ b/src/Akka.Persistence.EventStore.Query/reference.conf
@@ -1,6 +1,6 @@
 ﻿akka.persistence.query.journal.eventstore {
   # Implementation class of the EventStore ReadJournalProvider
-  class = "Akka.Persistence.Query.EventStore.EventStoreReadJournalProvider, Akka.Persistence.Query.EventStore"
+  class = "Akka.Persistence.EventStore.Query.EventStoreReadJournalProvider, Akka.Persistence.EventStore.Query"
 
   # Absolute path to the write journal plugin configuration entry that this 
   # query journal will connect to. 
