--- a/src/Akka.Persistence.EventStore/Akka.Persistence.EventStore.csproj
+++ b/src/Akka.Persistence.EventStore/Akka.Persistence.EventStore.csproj
@@ -1,21 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+	<Import Project="..\common.props" />
 	<PropertyGroup>
 		<TargetFrameworks>net45;netstandard1.6</TargetFrameworks>
 		<LangVersion>7.1</LangVersion>
 	</PropertyGroup>
 	<PropertyGroup>
-		<AssemblyTitle>Akka.Persistence.Redis</AssemblyTitle>
+		<AssemblyTitle>Akka.Persistence.EventStore</AssemblyTitle>
 		<Description>Akka.NET Persistence journal store backed by EventStore.</Description>
-		<Copyright>Copyright © 2018 Akka.NET Contrib Team</Copyright>
-		<VersionPrefix>1.0.0</VersionPrefix>
-		<Authors>Akka.NET Contrib Team</Authors>
 		<PackageTags>akka;actors;actor model;Akka;concurrency;persistence;eventsource;eventstore</PackageTags>
-		<PackageIconUrl>http://getakka.net/images/AkkaNetLogo.Normal.png</PackageIconUrl>
-		<PackageProjectUrl>https://github.com/AkkaNetContrib/Akka.Persistence.EventStore</PackageProjectUrl>
-		<PackageLicenseUrl>https://github.com/AkkaNetContrib/Akka.Persistence.EventStore/blob/dev/LICENSE</PackageLicenseUrl>
 		<GenerateDocumentationFile>false</GenerateDocumentationFile>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<NetStandardImplicitPackageVersion Condition=" '$(TargetFramework)' == 'netstandard1.6' ">1.6.1</NetStandardImplicitPackageVersion>
 	</PropertyGroup>
 
 
@@ -23,6 +18,7 @@
 		<EmbeddedResource Include="reference.conf" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="Akka" Version="1.3.*" />
 		<PackageReference Include="Akka.Persistence" Version="1.3.*" />
 		<PackageReference Include="Newtonsoft.Json" Version="11.0.*" />
 	</ItemGroup>
@@ -35,8 +31,16 @@
 		<PackageReference Include="EventStore.ClientAPI.NetCore" Version="4.0.0-4.1.*" />
 	</ItemGroup>
 
-	<ItemGroup>
-	  <ProjectReference Include="..\Akka.Persistence.EventStore.Common\Akka.Persistence.EventStore.Common.csproj" />
-	</ItemGroup>
+	<PropertyGroup Condition=" '$(TargetFramework)' == 'net45' ">
+		<DefineConstants>$(DefineConstants);SERIALIZATION</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
+		<DefineConstants>$(DefineConstants);CORECLR</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+		<DefineConstants>$(DefineConstants);RELEASE</DefineConstants>
+	</PropertyGroup>
 
 </Project>
