--- a/src/Akka.Persistence.EventStore/reference.conf
+++ b/src/Akka.Persistence.EventStore/reference.conf
@@ -20,4 +20,28 @@
 			adapter = "default"
 		}
 	}
+	
+	snapshot-store {
+	    eventstore {
+	        class = "Akka.Persistence.EventStore.Snapshot.EventStoreSnapshotStore, Akka.Persistence.EventStore"
+	        
+	        # connection string used for database access
+            connection-string = ""
+            
+            # connection name used for database access
+            connection-name = ""
+    
+            # dispatcher used to drive journal actor
+            plugin-dispatcher = "akka.actor.default-dispatcher"
+        
+            # how many snapshots to pull at a time
+            read-batch-size = 500
+            
+            # which adapter to use
+            adapter = "default"
+            
+            # prefix used to create stream name along side with PersistenceId for snapshot
+            prefix = "snapshot@"
+	    }
+	}
 }
