--- a/src/Akka.Persistence.EventStore.Tests/Akka.Persistence.EventStore.Tests.csproj
+++ b/src/Akka.Persistence.EventStore.Tests/Akka.Persistence.EventStore.Tests.csproj
@@ -10,23 +10,31 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.console" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
 
 
-    <PackageReference Include="Akka.Persistence.TCK" Version="1.3.6" />
+    <PackageReference Include="Akka.Persistence.TCK" Version="1.3.9" />
     <PackageReference Include="FluentAssertions" Version="4.19.4" />
     <PackageReference Include="Docker.DotNet" Version="3.125.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Akka.Persistence.EventStore.Query\Akka.Persistence.EventStore.Query.csproj" />
     <ProjectReference Include="..\Akka.Persistence.EventStore\Akka.Persistence.EventStore.csproj" />
+    
   </ItemGroup>
 
   <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Projections\taggedProjection.js" />
+    <EmbeddedResource Include="Projections\taggedProjection.js" />
   </ItemGroup>
 
 </Project>
