--- a/src/Akka.Persistence.EventStore.Query/Akka.Persistence.EventStore.Query.csproj
+++ b/src/Akka.Persistence.EventStore.Query/Akka.Persistence.EventStore.Query.csproj
@@ -23,8 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Akka" Version="1.3.9" />
-    <PackageReference Include="Akka.Persistence.Query" Version="1.3.*" />
+    <PackageReference Include="Akka.Persistence.Query" Version="$(AkkaVersion)" />
     <ProjectReference Include="..\Akka.Persistence.EventStore\Akka.Persistence.EventStore.csproj" />
   </ItemGroup>
   
