--- a/src/common.props
+++ b/src/common.props
@@ -8,4 +8,10 @@
     <PackageLicenseUrl>https://github.com/akkadotnet/akka.net/blob/master/LICENSE</PackageLicenseUrl>
     <PackageReleaseNotes>Current version</PackageReleaseNotes>
   </PropertyGroup>
+  <PropertyGroup>
+    <AkkaVersion>1.3.14</AkkaVersion>
+    <NBenchVersion>1.2.2</NBenchVersion>
+    <XunitVersion>2.4.1</XunitVersion>
+    <TestSdkVersion>15.9.0</TestSdkVersion>
+  </PropertyGroup>
 </Project>
