--- a/src/common.props
+++ b/src/common.props
@@ -1,10 +1,17 @@
 <Project>
-    <PropertyGroup>
-        <Copyright>Copyright © 2018 Akka.NET Contrib Team</Copyright>
-        <VersionPrefix>1.3.0</VersionPrefix>
-        <Authors>Akka.NET Contrib Team</Authors>
-        <PackageIconUrl>http://getakka.net/images/akkalogo.png</PackageIconUrl>
-        <PackageProjectUrl>https://github.com/akkadotnet/akka.net</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/akkadotnet/akka.net/blob/master/LICENSE</PackageLicenseUrl>
-    </PropertyGroup>
+  <PropertyGroup>
+    <Copyright>Copyright © 2018 Akka.NET Contrib Team</Copyright>
+    <VersionPrefix>1.3.0</VersionPrefix>
+    <Authors>Akka.NET Contrib Team</Authors>
+    <PackageIconUrl>http://getakka.net/images/akkalogo.png</PackageIconUrl>
+    <PackageProjectUrl>https://github.com/akkadotnet/akka.net</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/akkadotnet/akka.net/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageReleaseNotes>Current version</PackageReleaseNotes>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AkkaVersion>1.3.14</AkkaVersion>
+    <NBenchVersion>1.2.2</NBenchVersion>
+    <XunitVersion>2.4.1</XunitVersion>
+    <TestSdkVersion>15.9.0</TestSdkVersion>
+  </PropertyGroup>
 </Project>
