--- a/src/Akka.Persistence.EventStore/reference.conf
+++ b/src/Akka.Persistence.EventStore/reference.conf
@@ -13,10 +13,11 @@
 			# dispatcher used to drive journal actor
 			plugin-dispatcher = "akka.actor.default-dispatcher"
 		
-			#how many events to pull at a time while reading
+			# how many events to pull at a time while reading
 			read-batch-size = 500
 			
-			#which adapter to use
+			# Adapter to use to map Akka message to/from EventStore (see README)
+			# (default | legacy | assembly qualified class name)
 			adapter = "default"
 		}
 	}
@@ -37,7 +38,8 @@
             # how many snapshots to pull at a time
             read-batch-size = 500
             
-            # which adapter to use
+            # Adapter to use to map Akka snapshots to/from EventStore (see README)
+			# (default | legacy | assembly qualified class name)
             adapter = "default"
             
             # prefix used to create stream name along side with PersistenceId for snapshot
