Update Akka to version 1.4.1-RC1

--- a/src/Akka.Persistence.EventStore.Query/Akka.Persistence.EventStore.Query.csproj
+++ b/src/Akka.Persistence.EventStore.Query/Akka.Persistence.EventStore.Query.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\common.props" />
   <PropertyGroup>
-    <TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>$(NetFrameworkLibVersion);$(NetStandardLibVersion)</TargetFrameworks>
     <AssemblyName>Akka.Persistence.EventStore.Query</AssemblyName>
     <RootNamespace>Akka.Persistence.EventStore.Query</RootNamespace>
   </PropertyGroup>
@@ -11,7 +11,9 @@
     <PackageTags>akka;actors;actor model;Akka;concurrency;persistence;eventsource;eventstore;persistent query</PackageTags>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <!--
     <NetStandardImplicitPackageVersion Condition=" '$(TargetFramework)' == 'netstandard2.0' ">2.0.0</NetStandardImplicitPackageVersion>
+    -->
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,11 +29,11 @@
     <ProjectReference Include="..\Akka.Persistence.EventStore\Akka.Persistence.EventStore.csproj" />
   </ItemGroup>
 
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'net452' ">
+  <PropertyGroup Condition=" '$(TargetFramework)' == '$(NetFrameworkLibVersion)' ">
     <DefineConstants>$(DefineConstants);SERIALIZATION</DefineConstants>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+  <PropertyGroup Condition=" '$(TargetFramework)' == '$(NetStandardLibVersion)' ">
     <DefineConstants>$(DefineConstants);CORECLR</DefineConstants>
   </PropertyGroup>
 
