--- a/src/Akka.Persistence.EventStore/Akka.Persistence.EventStore.csproj
+++ b/src/Akka.Persistence.EventStore/Akka.Persistence.EventStore.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<Import Project="..\common.props" />
 	<PropertyGroup>
-		<TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
-		<LangVersion>7.1</LangVersion>
+		<LangVersion>latestmajor</LangVersion>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<PropertyGroup>
 		<AssemblyTitle>Akka.Persistence.EventStore</AssemblyTitle>
@@ -14,28 +15,19 @@
 
 
 	<ItemGroup>
+		<EmbeddedResource Include="Projections\allPersistedEventsProjection.js" />
+		<EmbeddedResource Include="Projections\allPersistenceIdsProjection.js" />
+		<EmbeddedResource Include="Projections\taggedProjection.js" />
 		<EmbeddedResource Include="reference.conf" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Akka" Version="$(AkkaVersion)" />
-		<PackageReference Include="Akka.Persistence" Version="$(AkkaVersion)" />
+		<PackageReference Include="Akka" Version="1.5.15" />
+		<PackageReference Include="Akka.Persistence" Version="1.5.15" />
+		<PackageReference Include="Akka.Persistence.Query" Version="1.5.15" />
+		<PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="23.1.0" />
+		<PackageReference Include="LanguageExt.Core" Version="4.4.7" />
+		<PackageReference Include="EventStore.Client.Grpc.Streams" Version="23.1.0" />
 	</ItemGroup>
-
-	<ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
-		<PackageReference Include="EventStore.Client" Version="5.*" />
-	</ItemGroup>
-
-	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-		<PackageReference Include="EventStore.Client" Version="5.*" />
-	</ItemGroup>
-
-	<PropertyGroup Condition=" '$(TargetFramework)' == 'net452' ">
-		<DefineConstants>$(DefineConstants);SERIALIZATION</DefineConstants>
-	</PropertyGroup>
-
-	<PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-		<DefineConstants>$(DefineConstants);CORECLR</DefineConstants>
-	</PropertyGroup>
 
 	<PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
 		<DefineConstants>$(DefineConstants);RELEASE</DefineConstants>
