--- a/src/Akka.Persistence.EventStore/reference.conf
+++ b/src/Akka.Persistence.EventStore/reference.conf
@@ -7,14 +7,8 @@
 			# connection string used for database access
 			connection-string = ""
 			
-			# connection name used for database access
-			connection-name = ""
-
 			# dispatcher used to drive journal actor
 			plugin-dispatcher = "akka.actor.default-dispatcher"
-		
-			# how many events to pull at a time while reading
-			read-batch-size = 500
 			
 			# Adapter to use to map Akka message to/from EventStore (see README)
 			# (default | legacy | assembly qualified class name)
@@ -28,15 +22,9 @@
 	        
 	        # connection string used for database access
             connection-string = ""
-            
-            # connection name used for database access
-            connection-name = ""
     
             # dispatcher used to drive journal actor
             plugin-dispatcher = "akka.actor.default-dispatcher"
-        
-            # how many snapshots to pull at a time
-            read-batch-size = 500
             
             # Adapter to use to map Akka snapshots to/from EventStore (see README)
 			# (default | legacy | assembly qualified class name)
@@ -45,5 +33,20 @@
             # prefix used to create stream name along side with PersistenceId for snapshot
             prefix = "snapshot@"
 	    }
+	}
+
+	query.journal.eventstore {
+		# Implementation class of the EventStore ReadJournalProvider
+		class = "Akka.Persistence.EventStore.Query.EventStoreReadJournalProvider, Akka.Persistence.EventStore"
+
+		# Absolute path to the write journal plugin configuration entry that this 
+		# query journal will connect to. 
+		# If undefined (or "") it will connect to the default journal as specified by the
+		# akka.persistence.journal.plugin property.
+		write-plugin = ""
+
+		tagged-stream-prefix = ""
+		persistence-ids-stream-name = ""
+		persisted-events-stream-name = ""
 	}
 }
