--- a/src/Akka.Persistence.EventStore/Akka.Persistence.EventStore.csproj
+++ b/src/Akka.Persistence.EventStore/Akka.Persistence.EventStore.csproj
@@ -24,6 +24,7 @@
 		<PackageReference Include="Akka" Version="1.5.15" />
 		<PackageReference Include="Akka.Persistence" Version="1.5.15" />
 		<PackageReference Include="Akka.Persistence.Query" Version="1.5.15" />
+		<PackageReference Include="EventStore.Client.Grpc.PersistentSubscriptions" Version="23.1.0" />
 		<PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="23.1.0" />
 		<PackageReference Include="LanguageExt.Core" Version="4.4.7" />
 		<PackageReference Include="EventStore.Client.Grpc.Streams" Version="23.1.0" />
