--- a/src/Akka.Persistence.EventStore/reference.conf
+++ b/src/Akka.Persistence.EventStore/reference.conf
@@ -11,7 +11,7 @@
 			plugin-dispatcher = "akka.actor.default-dispatcher"
 			
 			# Adapter to use to map Akka message to/from EventStore (see README)
-			# (default | legacy | assembly qualified class name)
+			# (default | assembly qualified class name)
 			adapter = "default"
 		}
 	}
@@ -27,7 +27,7 @@
             plugin-dispatcher = "akka.actor.default-dispatcher"
             
             # Adapter to use to map Akka snapshots to/from EventStore (see README)
-			# (default | legacy | assembly qualified class name)
+						# (default | assembly qualified class name)
             adapter = "default"
             
             # prefix used to create stream name along side with PersistenceId for snapshot
