--- a/src/Akka.Persistence.EventStore/persistence.conf
+++ b/src/Akka.Persistence.EventStore/persistence.conf
@@ -13,6 +13,8 @@
 			# Adapter to use to map Akka message to/from EventStore (see README)
 			# (default | assembly qualified class name)
 			adapter = "default"
+
+			auto-initialize = false
 			
 			prefix = ""
 
