Added tenant support

--- a/src/Akka.Persistence.EventStore/persistence.conf
+++ b/src/Akka.Persistence.EventStore/persistence.conf
@@ -17,8 +17,9 @@
 			auto-initialize = false
 			
 			prefix = ""
+			tenant = ""
 
-			tagged-stream-prefix = "tagged-"
+			tagged-stream-name-pattern = "tagged-[[TAG]]"
 			persistence-ids-stream-name = "persistenceids"
 			persisted-events-stream-name = "persistedevents"
 		}
@@ -35,5 +36,9 @@
 		write-plugin = ""
 
 		refresh-interval = 5s
+	}
+
+	eventstore.tenant {
+		tenant-stream-name-pattern = "[[STREAM_NAME]]@[[TENANT_NAME]]"
 	}
 }
