--- a/src/Akka.Persistence.EventStore/snapshot.conf
+++ b/src/Akka.Persistence.EventStore/snapshot.conf
@@ -4,17 +4,19 @@
 	        class = "Akka.Persistence.EventStore.Snapshot.EventStoreSnapshotStore, Akka.Persistence.EventStore"
 	        
 	        # connection string used for database access
-            connection-string = ""
+					connection-string = ""
     
-            # dispatcher used to drive journal actor
-            plugin-dispatcher = "akka.actor.default-dispatcher"
-            
-            # Adapter to use to map Akka snapshots to/from EventStore (see README)
-						# (default | assembly qualified class name)
-            adapter = "default"
-            
-            # prefix used to create stream name along side with PersistenceId for snapshot
-            prefix = "snapshot@"
+					# dispatcher used to drive journal actor
+					plugin-dispatcher = "akka.actor.default-dispatcher"
+					
+					# Adapter to use to map Akka snapshots to/from EventStore (see README)
+					# (default | assembly qualified class name)
+					adapter = "default"
+
+					tenant = ""
+					
+					# prefix used to create stream name along side with PersistenceId for snapshot
+					prefix = "snapshot@"
 	    }
 	}
 }
