Update to gRPC client (#19)
* Upgraded to new eventstore client and modernized plugin

* Removed unused config

* Added source for persistent subscriptions

* Refactored queries

* Use base tests

* Refactored materialization value

* wip

* Added akka hosting support

* Request correct amount

* Refactored serialization

* Refactored serialization

* Refactored streams

* Refactored snapshot store

* Refactored streaming

* Fixed a issue where we used the wrong seqnr for deleted streams

* Skip truncate if it's already truncated later

* Removed unused class

* Added tenant support

* Updated redme

* Added breaking changes

* Added breaking changes

* Updated readme

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Copyright>Copyright © 2013-2024 Akka.NET Project</Copyright>
     <NoWarn>$(NoWarn);CS1591;NU1701;CA1707;</NoWarn>
-    <VersionPrefix>1.4.0</VersionPrefix>
+    <VersionPrefix>1.5.0</VersionPrefix>
     <Authors>Akka.NET Team</Authors>
     <PackageProjectUrl>https://github.com/akkadotnet/Akka.Persistence.EventStore</PackageProjectUrl>
     <PackageReleaseNotes>Serialization changes to match 1.4 API
@@ -17,7 +17,7 @@ EventAdapter interface change (see README)</PackageReleaseNotes>
     <PackageIcon>logo.png</PackageIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <NetLibraryVersion>netstandard2.0</NetLibraryVersion>
+    <NetLibraryVersion>net6.0</NetLibraryVersion>
     <NetFrameworkVersion>net472</NetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Label="Build">
