--- a/src/Akka.Persistence.EventStore/Akka.Persistence.EventStore.csproj
+++ b/src/Akka.Persistence.EventStore/Akka.Persistence.EventStore.csproj
@@ -1,18 +1,35 @@
 <Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<TargetFrameworks>$(NetFrameworkVersion);$(NetLibraryVersion)</TargetFrameworks>
-		<PackageTags>akka;actors;actor model;Akka;concurrency;persistence;eventsource;eventstore</PackageTags>
-		<GenerateDocumentationFile>false</GenerateDocumentationFile>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	</PropertyGroup>
+    <PropertyGroup>
+        <LangVersion>latestmajor</LangVersion>
+        <TargetFramework>$(NetLibraryVersion)</TargetFramework>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
+    <PropertyGroup>
+        <AssemblyTitle>Akka.Persistence.EventStore</AssemblyTitle>
+        <Description>Akka.NET Persistence journal store backed by EventStore.</Description>
+        <PackageTags>akka;actors;actor model;Akka;concurrency;persistence;eventsource;eventstore</PackageTags>
+        <GenerateDocumentationFile>false</GenerateDocumentationFile>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Akka" />
-		<PackageReference Include="Akka.Persistence" />
-		<PackageReference Include="EventStore.Client" />
-	</ItemGroup>
+    <ItemGroup>
+        <EmbeddedResource Include="Projections\allPersistedEventsProjection.js"/>
+        <EmbeddedResource Include="Projections\allPersistenceIdsProjection.js"/>
+        <EmbeddedResource Include="Projections\taggedProjection.js"/>
+        <EmbeddedResource Include="persistence.conf"/>
+        <EmbeddedResource Include="snapshot.conf"/>
+    </ItemGroup>
 
-	<ItemGroup>
-		<EmbeddedResource Include="reference.conf" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Akka"/>
+        <PackageReference Include="Akka.Persistence"/>
+        <PackageReference Include="Akka.Persistence.Query"/>
+        <PackageReference Include="EventStore.Client.Grpc.PersistentSubscriptions"/>
+        <PackageReference Include="EventStore.Client.Grpc.ProjectionManagement"/>
+        <PackageReference Include="EventStore.Client.Grpc.Streams"/>
+    </ItemGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+        <DefineConstants>$(DefineConstants);RELEASE</DefineConstants>
+    </PropertyGroup>
 </Project>
