Added missing configuration. Updated akka. Added PublicApi annotations.

--- a/src/Akka.Persistence.EventStore/Akka.Persistence.EventStore.csproj
+++ b/src/Akka.Persistence.EventStore/Akka.Persistence.EventStore.csproj
@@ -26,6 +26,7 @@
         <PackageReference Include="EventStore.Client.Grpc.PersistentSubscriptions"/>
         <PackageReference Include="EventStore.Client.Grpc.ProjectionManagement"/>
         <PackageReference Include="EventStore.Client.Grpc.Streams"/>
+        <PackageReference Include="JetBrains.Annotations" />
     </ItemGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
