--- a/src/Akka.Persistence.EventStore/persistence.conf
+++ b/src/Akka.Persistence.EventStore/persistence.conf
@@ -8,7 +8,7 @@
 			connection-string = ""
 			
 			# dispatcher used to drive journal actor
-			plugin-dispatcher = "akka.actor.default-dispatcher"
+			materializer-dispatcher = "akka.actor.default-dispatcher"
 			
 			# Adapter to use to map Akka message to/from EventStore (see README)
 			# (default | assembly qualified class name)
