--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,40 +1,41 @@
 <Project>
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    <AkkaVersion>1.5.18</AkkaVersion>
+    <AkkaVersion>1.5.19</AkkaVersion>
     <EventStoreVersion>23.2.1</EventStoreVersion>
-    <NBenchVersion>1.2.2</NBenchVersion>
-    <XunitVersion>2.4.1</XunitVersion>
-    <TestSdkVersion>15.9.0</TestSdkVersion>
+    <XunitVersion>2.7.1</XunitVersion>
+    <TestSdkVersion>17.9.0</TestSdkVersion>
   </PropertyGroup>
   <!-- Akka.NET Package Versions -->
   <ItemGroup>
-    <PackageVersion Include="Akka.Hosting" Version="1.5.6.1" />
-    <PackageVersion Include="Akka.Persistence.Hosting" Version="1.5.18" />
-    <PackageVersion Include="NuGet.Frameworks" Version="6.9.1" />
-    <PackageVersion Include="Akka" Version="1.5.18" />
+    <PackageVersion Include="Akka.Persistence.Hosting" Version="$(AkkaVersion)" />
+    <PackageVersion Include="Akka" Version="$(AkkaVersion)" />
     <PackageVersion Include="Akka.Persistence" Version="$(AkkaVersion)" />
     <PackageVersion Include="Akka.Persistence.Query" Version="$(AkkaVersion)" />
   </ItemGroup>
   <!-- EventStore Package Versions -->
   <ItemGroup>
-    <PackageVersion Include="EventStore.Client.Grpc.PersistentSubscriptions" Version="$(EventStoreVersion)"/>
-    <PackageVersion Include="EventStore.Client.Grpc.ProjectionManagement" Version="$(EventStoreVersion)"/>
-    <PackageVersion Include="EventStore.Client.Grpc.Streams" Version="$(EventStoreVersion)"/>
+    <PackageVersion Include="EventStore.Client.Grpc.PersistentSubscriptions" Version="$(EventStoreVersion)" />
+    <PackageVersion Include="EventStore.Client.Grpc.ProjectionManagement" Version="$(EventStoreVersion)" />
+    <PackageVersion Include="EventStore.Client.Grpc.Streams" Version="$(EventStoreVersion)" />
   </ItemGroup>
   <!-- Testing Utilities -->
   <ItemGroup>
-    <PackageVersion Include="Akka.Persistence.TCK" Version="1.5.18" />
-    <PackageVersion Include="Akka.Hosting.TestKit" Version="1.5.18" />
+    <PackageVersion Include="Akka.Persistence.TCK" Version="$(AkkaVersion)" />
+    <PackageVersion Include="Akka.Hosting.TestKit" Version="$(AkkaVersion)" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-    <PackageVersion Include="xunit" Version="2.7.0" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.7" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="$(TestSdkVersion)" />
+    <PackageVersion Include="xunit" Version="$(XunitVersion)" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageVersion>
     <PackageVersion Include="FluentAssertions" Version="6.12.0" />
-    <PackageVersion Include="coverlet.collector" Version="6.0.2" />
     <PackageVersion Include="Docker.DotNet" Version="3.125.15" />
   </ItemGroup>
   <ItemGroup>
     <GlobalPackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="all" />
+    <PackageVersion Include="JetBrains.Annotations" Version="2023.3.0" />
+    <PackageVersion Include="NuGet.Frameworks" Version="6.9.1" />
   </ItemGroup>
 </Project>
