--- a/src/Akka.Persistence.EventStore/snapshot.conf
+++ b/src/Akka.Persistence.EventStore/snapshot.conf
@@ -7,7 +7,7 @@
 					connection-string = ""
     
 					# dispatcher used to drive journal actor
-					plugin-dispatcher = "akka.actor.default-dispatcher"
+					materializer-dispatcher = "akka.actor.default-dispatcher"
 					
 					# Adapter to use to map Akka snapshots to/from EventStore (see README)
 					# (default | assembly qualified class name)
