--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,10 +1,10 @@
 <Project>
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    <AkkaVersion>1.5.20</AkkaVersion>
-    <EventStoreVersion>23.2.1</EventStoreVersion>
-    <XunitVersion>2.8.0</XunitVersion>
-    <TestSdkVersion>17.9.0</TestSdkVersion>
+    <AkkaVersion>1.5.25</AkkaVersion>
+    <EventStoreVersion>23.3.3</EventStoreVersion>
+    <XunitVersion>2.8.1</XunitVersion>
+    <TestSdkVersion>17.10.0</TestSdkVersion>
   </PropertyGroup>
   <!-- Akka.NET Package Versions -->
   <ItemGroup>
@@ -26,7 +26,7 @@
     <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="$(TestSdkVersion)" />
     <PackageVersion Include="xunit" Version="$(XunitVersion)" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.0">
+    <PackageVersion Include="xunit.runner.visualstudio" Version="$(XunitVersion)">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
