--- a/src/Akka.Persistence.EventStore/persistence.conf
+++ b/src/Akka.Persistence.EventStore/persistence.conf
@@ -18,6 +18,8 @@
 			
 			prefix = ""
 			tenant = ""
+			parallelism = 6
+			buffer-size = 5000
 
 			tagged-stream-name-pattern = "tagged-[[TAG]]"
 			persistence-ids-stream-name = "persistenceids"
