--- a/src/Akka.Persistence.EventStore/snapshot.conf
+++ b/src/Akka.Persistence.EventStore/snapshot.conf
@@ -14,6 +14,8 @@
 					adapter = "default"
 
 					tenant = ""
+				  parallelism = 6
+				  buffer-size = 5000
 					
 					# prefix used to create stream name along side with PersistenceId for snapshot
 					prefix = "snapshot@"
